--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.7.1",
+    "pinia": "^2.1.7",
     "vue": "^3.3.11"
   },
   "devDependencies": {
