--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@vueuse/core": "^10.7.1",
     "@vueuse/motion": "^2.0.0",
     "pinia": "^2.1.7",
-    "vue": "^3.3.11"
+    "vue": "^3.3.11",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@iconify/vue": "^4.1.1",
