--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@vueuse/motion": "^2.0.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue3-colorpicker": "^2.2.3"
   },
   "devDependencies": {
     "@iconify/vue": "^4.1.1",
