--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vueuse/motion": "^2.0.0",
     "html-to-image": "^1.11.11",
     "pinia": "^2.1.7",
+    "tinycolor2": "^1.6.0",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
     "vue3-colorpicker": "^2.2.3"
