--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "merge-it",
-  "private": true,
+  "private": false,
   "version": "0.0.1",
-  "type": "commonjs",
-  "main": "src/main.ts",
   "homepage": "https://vadvoice.github.io/merge-it",
+  "main": "src/main.ts",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
